# worldbuilder

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
assets/editors/: README.md  character.yaml  continuity.yaml  dialogue.yaml  geography.yaml  pacing.yaml  plot.yaml  prose.yaml  sensitivity.yaml  worldrules.yaml
assets/example/the-lattice/: project.yaml
assets/example/the-shattered-crown/: project.yaml
assets/presets/: campaign.yaml  fantasy.yaml  scifi.yaml
assets/templates/: archetypes.yaml  descriptions.yaml  project_template.yaml  styles.yaml  visual_descriptors.yaml  world_flags.yaml
assets/templates/arcs/: _schema.yaml  _template.yaml
assets/templates/chapters/: _template.md
assets/templates/characters/: _template.md
assets/templates/economy/: _schema.yaml  _template.yaml
assets/templates/events/: _schema.yaml  _template.md
assets/templates/factions/: _schema.yaml  _template.md
assets/templates/geography/: _template.yaml
assets/templates/items/: _template.md
assets/templates/languages/: _family_template.yaml  _schema.yaml  _template.md
assets/templates/lineages/: _template.md
assets/templates/locations/: _schema.yaml  _template.md
assets/templates/magic-systems/: _schema.yaml  _template.md
docs/: QUICKSTART.md  REFERENCE.md
mcp_server/: worldbuilder_mcp.py
references/: descriptions.md  economy.md  editors.md  entity-schemas.md  style-system.md  wizard.md
scripts/: graph.py  worldbuilder.py
webapp/: app.py  imagegen.py  mlx_lock.py  voicegen.py
webapp/static/css/: style.css
webapp/templates/: index.html
(+176 files in other folders)
